deploy/deploy-app.yaml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "tsnext"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "deployment-app"
  namespace: "tsnext"
  labels:
    app: "tsapp"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "tsapp"
  template:
    metadata:
      labels:
        app: "tsapp"
    spec:
      containers:
      - name: "tsapp-1"
        image: "us-west1-docker.pkg.dev/website-410522/tsnext/tsapp:v1"
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /nginx-health
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 30
          timeoutSeconds: 1
      serviceAccountName: tsnextsa
