deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tsapp-ingress
spec:
  defaultBackend:
    service:
      name: tsapp-service
      port:
        number: 3000
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tsapp-service
                port:
                  number: 3000
          - path: /tsapi/v1
            pathType: Prefix
            backend:
              service:
                name: tsapi-service
                port:
                  number: 3000
